[package]
name = "ggga"
version = "0.1.0"
authors = ["Vladimir Shakhov <bogdad@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11"
itertools = "0.10.0"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
winit = "0.24"
vulkano-win = "0.20.0"
cgmath = "0.17.0"
gltf = "0.15.2"
genmesh = "0.6.2"
rand_distr = "0.4.0"
rand = "0.8.1"
vulkano_text = "0.13.0"
mint = "0.5.6"
ab_glyph = "0.2.9"
image = "0.23.13"
rodio = "0.13.1"
profiling = "1.0.0"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies.futures]
version = "0.3.12"
features = ["thread-pool"]

[build]
jobs = 2