[package]
name = "ggga"
version = "0.1.0"
authors = ["Vladimir Shakhov <bogdad@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11"
itertools = "0.10"
vulkano = "0.23"
vulkano-shaders = "0.23.0"
winit = "0.24"
vulkano-win = "0.23"
cgmath = "0.18"
gltf = "0.16"
genmesh = "0.6"
rand_distr = "0.4"
rand = "0.8"
vulkano_text = "0.14"
mint = "0.5"
ab_glyph = "0.2"
image = "0.23"
rodio = "0.14"
profiling = "1.0"
bevy_ecs = "0.5"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies.futures]
version = "0.3.12"
features = ["thread-pool"]

[build]
jobs = 2